<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.appxi</groupId>
	<artifactId>cbeta-explorer</artifactId>
	<version>21.01.00</version>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>16</maven.compiler.source>
		<maven.compiler.target>16</maven.compiler.target>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.appxi</groupId>
			<artifactId>appxi-javafx</artifactId>
			<version>21.01.00</version>
		</dependency>
		<dependency>
			<groupId>org.appxi</groupId>
			<artifactId>appxi-tome</artifactId>
			<version>21.01.00</version>
		</dependency>
		<dependency>
			<groupId>org.appxi</groupId>
			<artifactId>appxi-timeago</artifactId>
			<version>21.01.00</version>
		</dependency>
		<dependency>
			<groupId>org.appxi</groupId>
			<artifactId>appxi-hanlp-convert</artifactId>
			<version>21.01.00</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
<!--		<dependency>-->
<!--			<groupId>com.h2database</groupId>-->
<!--			<artifactId>h2</artifactId>-->
<!--			<version>2.0.201-SNAPSHOT</version>-->
<!--			<exclusions>-->
<!--				<exclusion>-->
<!--					<groupId>*</groupId>-->
<!--					<artifactId>*</artifactId>-->
<!--				</exclusion>-->
<!--			</exclusions>-->
<!--		</dependency>-->
		<!-- https://mvnrepository.com/artifact/com.dieselpoint/norm -->
		<!--<dependency>
			<groupId>com.dieselpoint</groupId>
			<artifactId>norm</artifactId>
			<version>1.0</version>
		</dependency>-->
<!--		<dependency>-->
<!--			<groupId>org.apache.openjpa</groupId>-->
<!--			<artifactId>openjpa-persistence</artifactId>-->
<!--			<version>3.1.2</version>-->
<!--		</dependency>-->
<!--		<dependency>-->
<!--			<groupId>org.eclipse.persistence</groupId>-->
<!--			<artifactId>javax.persistence</artifactId>-->
<!--			<version>2.2.0</version>-->
<!--		</dependency>-->

<!--		<dependency>-->
<!--			<groupId>org.eclipse.persistence</groupId>-->
<!--			<artifactId>eclipselink</artifactId>-->
<!--			<version>2.5.2</version>-->
<!--		</dependency>-->
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<compilerArgs>--enable-preview</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.2.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<phase>verify</phase>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
			</plugin>
		</plugins>
	</build>
</project>